samples/_failures_safe/1761332076_a4b78c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_169b813f.c: In function ‘determinant_matrix’:
./samples/SAFE/__tmp_169b813f.c:152: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_169b813f.c:151:13: error: expected declaration or statement at end of input
  151 |             for
      |             ^~~
./samples/SAFE/__tmp_169b813f.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_169b813f.c:151:13: error: expected declaration or statement at end of input
